--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.flyway.baselineOnMigrate=true
 spring.flyway.locations=classpath:db/migration
+
+spring.data.web.pageable.page-parameter=pageNumber
+spring.data.web.pageable.size-parameter=pageSize
